--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,6 +1,9 @@
 name: CI
 
-on: [pull_request]
+on: 
+  pull_request:
+    branches:
+      - main
 
 jobs:
   test_build:
@@ -9,8 +12,23 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
-      
+
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v2
+
+      - name: Log in to GitHub Container Registry
+        run: echo "${{ secrets.GHCR_TOKEN }}" | docker login ghcr.io -u ${{ github.actor }} --password-stdin
+
       - name: Test
         run: |
           docker-compose -f docker-compose.test.yaml up --build --no-deps --abort-on-container-exit --exit-code-from oaipmh
           docker-compose -f docker-compose.test.yaml down
+
+      - name: Build and push Docker image
+        if: success() # Nur ausführen, wenn die vorherigen Schritte erfolgreich waren
+        run: |
+          docker build -t ghcr.io/${{ github.repository }}:latest .
+          docker push ghcr.io/${{ github.repository }}:latest
+
+      - name: Logout from GitHub Container Registry
+        run: docker logout ghcr.io
