--- a/production/.env
+++ b/production/.env
@@ -9,8 +9,8 @@ DB_HOST=localhost
 DB_PORT=27017
 DB_USER=dacatDBAdmin
 DB_PASS=
-DATABASE=oai-publications
-COLLECTION=Publication
+DATABASE=dacat-next
+COLLECTION=PublishedData
 NAME=oai-mongo
 CONNECTOR=mongodb
 ADMIN_USER_EMAIL=luke.gorman@psi.ch
