--- a/production/.env
+++ b/production/.env
@@ -10,7 +10,7 @@ DB_PORT=27017
 DB_USER=dacatDBAdmin
 DB_PASS=
 DATABASE=dacat-next
-COLLECTION=PublishedData
+COLLECTION=Publication
 NAME=oai-mongo
 CONNECTOR=mongodb
 ADMIN_USER_EMAIL=luke.gorman@psi.ch
